<resources>
    <string name="app_name">SocialConnect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="user_login">Login</string>
    <string name="user_sign_up">Sign Up</string>
    <string name="login_or">______________ or ______________</string>
    <string name="hint_acc_name">Type in Name</string>
    <string name="acc_btn_done">Done</string>
    <string name="post_description">Description</string>
    <string name="post_description_hint">Write Your Description here.......</string>
    <string name="post_blog_button">Post Your Blog</string>

    <string name="home_frag_desc">This is a Sample Text to Show that the Description of the Blog
        will be going here . Happy Coding</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_title_account">Account</string>
    <string name="home_frag_user_name">User Name</string>
</resources>
